# RAG-movie-recommend

./: .gitignore  CLAUDE.md  RAG电影推荐_实施计划.md  RAG电影推荐_实施计划_简化版.md  RAG电影推荐_项目细节与面试预判.md  README.md  build_index_runner.py  experiment_results.json  pyproject.toml  run_experiments.py  论文_RAG电影推荐系统.md  项目介绍.md
.claude/: settings.local.json
config/: default.yaml  style_dict.json
src/chunking/: chunker.py
src/cli/: build_index.py  evaluate.py  recommend.py
src/core/: config.py  schemas.py
src/data/: cleaner.py  filters.py  pipeline.py
src/evaluation/: eval_set.py  metrics.py  runner.py
src/generation/: explainer.py  grounding.py
src/indexing/: bm25_index.py  embedder.py  vector_store.py
src/query/: parser.py  similar_to.py
src/ranking/: reranker.py
src/retrieval/: bm25_retriever.py  metadata_filter.py  orchestrator.py  rrf.py  vector_retriever.py
tests/: conftest.py  test_metadata_filter.py  test_metrics.py  test_rrf.py
