[project]
name = "movie-recommend"
version = "0.1.0"
description = "RAG-based movie recommendation system"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42",
    "openai>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "datasets>=2.0",
    "tqdm>=4.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
